内存效率优化